app/styles/pages/_users.scss
.users {
  list-style-position: inside;
  li {
    margin-bottom: 10px;
  }
  img {
    margin-right: 10px;
  }
  .info {
    display: inline-block;
  }
  a {
    display: inline-block;
    margin-right: 10px;
    margin-bottom: 10px;
  }
}

